fixed cropping problem?

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,7 @@
 .img {
     max-width: 50%;
     max-height: 50%;
+    display: inline;
 }
 li
 {
